MIT Kerberos or Heimdal.  The GS2-KRB5-PLUS variant with TLS channel
bindings are not supported.

** Detecting GSS-API implementation simplified.
MIT Kerberos and Heimdal are now treated the same, it appears as if
they are compatible in modern releases.

** DIGEST-MD5: The server code now returns GSASL_OK after the final token.

** API and ABI modifications.
No changes since last version.

* Version 1.4.4 (released 2010-03-25) [stable]

** SCRAM: Fix build error on platforms without strnlen.

** API and ABI modifications.
No changes since last version.

* Version 1.4.3 (released 2010-03-25) [stable]

** SCRAM: Don't read out of bounds when parsing tokens.

** API and ABI modifications.
No changes since last version.

* Version 1.4.2 (released 2010-03-15) [stable]

** SCRAM: Encode and decode username/authzid properly.
Before any username/authzid that contained '=' or ',' would not work.

** Fix typo in error message for GSASL_GSSAPI_ACCEPT_SEC_CONTEXT_ERROR.

** i18n: Updated translations.

** API and ABI modifications.
No changes since last version.

* Version 1.4.1 (released 2010-02-16) [stable]

** API and ABI modifications.
No changes since last version.

* Version 1.4.0 (released 2009-11-17) [stable]

** No changes since 1.3.91 release candidate.

** API and ABI modifications.
No changes since last version.

* Version 1.3.91 (released 2009-11-06) [experimental]

** Fix Visual Studio project files to work with SCRAM.
Suggested by Lothar May <lothar.imap@googlemail.com> in
<http://thread.gmane.org/gmane.comp.gnu.gsasl.general/254>.

** API and ABI modifications.
No changes since last version.

* Version 1.3.90 (released 2009-11-06) [experimental]

** libgsasl: Properly increment libtool version to reflect newly added ABIs.
This was accidentally forgotten in the last release.

** libgsasl: Export gsasl_sha1 and gsasl_hmac_sha1 in linker version script.
This was accidentally forgotten in the last release.
