@@ -148,7 +148,10 @@ extern "C"
     GSASL_KERBEROS_V5_INTERNAL_ERROR = 47,
     GSASL_SHISHI_ERROR = GSASL_KERBEROS_V5_INTERNAL_ERROR,
     GSASL_SECURID_SERVER_NEED_ADDITIONAL_PASSCODE = 48,
-    GSASL_SECURID_SERVER_NEED_NEW_PIN = 49
+    GSASL_SECURID_SERVER_NEED_NEW_PIN = 49,
+    GSASL_GSSAPI_ENCAPSULATE_TOKEN_ERROR = 50,
+    GSASL_GSSAPI_DECAPSULATE_TOKEN_ERROR = 51,
+    GSASL_GSSAPI_INQUIRE_MECH_FOR_SASLNAME_ERROR = 52
   } Gsasl_rc;
 
   /* Quality of Protection types, used by DIGEST-MD5 */
